<?xml version="1.0"?>
<package format="2">
  <name>ur_description</name>
  <version>1.2.5</version>
  <description>
      URDF description for Universal UR10e
  </description>

  <author>Jegathesan S</author>
  <maintainer email="nullbyte.in@gmail.com">Jegathesan S</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ur_description</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
